--- a/package.json
+++ b/package.json
@@ -299,14 +299,21 @@
         "gulp-jsonminify": "^1.1.0",
         "gulp-minify": "^3.1.0",
         "jquery": "^3.2",
+        "laravel-mix": "^6.0.13",
         "nodemon": "^2.0.7",
         "popper.js": "^1.12",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "gulp": "gulp"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "repository": {
         "type": "git",
