--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "cache-base": "^1.0.1",
         "call-bind": "^1.0.2",
         "camelcase": "^3.0.0",
-        "chokidar": "^2.1.8",
+        "chokidar": "^3.5.2",
         "class-utils": "^0.3.6",
         "cliui": "^3.2.0",
         "clone": "^2.1.2",
@@ -118,7 +118,7 @@
         "has-value": "^1.0.0",
         "has-values": "^1.0.0",
         "homedir-polyfill": "^1.0.3",
-        "hosted-git-info": "^2.8.8",
+        "hosted-git-info": "^2.8.9",
         "inflight": "^1.0.6",
         "inherits": "^2.0.4",
         "ini": "^1.3.8",
@@ -274,6 +274,7 @@
         "v8flags": "^3.2.0",
         "validate-npm-package-license": "^3.0.4",
         "value-or-function": "^3.0.0",
+        "vanilla-tilt": "^1.7.0",
         "vinyl": "^2.2.1",
         "vinyl-fs": "^3.0.3",
         "vinyl-sourcemap": "^1.1.0",
@@ -299,7 +300,7 @@
         "gulp-jsonminify": "^1.1.0",
         "gulp-minify": "^3.1.0",
         "jquery": "^3.2",
-        "laravel-mix": "^6.0.13",
+        "laravel-mix": "^6.0.25",
         "nodemon": "^2.0.7",
         "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.2",
